RESOLVED FIXED208635
[WPE] AsyncScrolling: scrolling with the mouse wheel over sub-scrollable areas scrolls the main frame
https://bugs.webkit.org/show_bug.cgi?id=208635
Summary [WPE] AsyncScrolling: scrolling with the mouse wheel over sub-scrollable area...
Carlos Garcia Campos
Reported 2020-03-05 05:00:19 PST
For some reason this only works for list boxes, but doesn't work for other elements like text areas or iframes. It also happens in GTK port when AC mode is forced (async scrolling is used).
Attachments
Patch (1.76 KB, patch)
2020-03-08 23:52 PDT, Zan Dobersek
no flags
Carlos Garcia Campos
Comment 1 2020-03-05 06:04:26 PST
Could it be that this regressed in r257268? Simon, is this the expected behavior with current trunk? ScrollingTree::scrollingNodeForPoint() always returns the root node.
Simon Fraser (smfr)
Comment 2 2020-03-05 12:54:05 PST
Was Nicosia/Coordinated Graphics relying on that geometry? It was very broken in many cases, so shipping anything that used it was a mistake. I'll be adding new code that fixes this for macOS; Nicosia/Coordinated Graphics should follow what I'm doing.
Zan Dobersek
Comment 3 2020-03-08 23:47:23 PDT
(In reply to Simon Fraser (smfr) from comment #2) > Was Nicosia/Coordinated Graphics relying on that geometry? It was very > broken in many cases, so shipping anything that used it was a mistake. > > I'll be adding new code that fixes this for macOS; Nicosia/Coordinated > Graphics should follow what I'm doing. The implementation was implicitly relying on it, but nothing shipped with it. We'll disable async overflow scrolling for now, and follow what macOS will be doing.
Zan Dobersek
Comment 4 2020-03-08 23:52:37 PDT
Zan Dobersek
Comment 5 2020-03-09 06:08:07 PDT
Comment on attachment 393012 [details] Patch Clearing flags on attachment: 393012 Committed r258134: <https://trac.webkit.org/changeset/258134>
Zan Dobersek
Comment 6 2020-03-09 06:08:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.