[WPE] AsyncScrolling: scrolling with the mouse wheel over sub-scrollable areas scrolls the main frame https://bugs.webkit.org/show_bug.cgi?id=208635

Reviewed by Carlos Garcia Campos.

Rework the default values for the async frame and overflow scrolling
so that the latter stays disabled for Nicosia-using ports as it
undergoes bigger changes.

* Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultAsyncFrameAndOverflowScrollingEnabled):
(WebKit::defaultAsyncFrameScrollingEnabled):


Canonical link: https://commits.webkit.org/221739@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258134 268f45cc-cd09-0410-ab3c-d52691b4dbfc